--- a/strings.yaml
+++ b/strings.yaml
@@ -1,9 +1,9 @@
 {
-  "title": "Custom Generic thermostat",
+  "title": "Better Generic thermostat",
   "config": {
     "step": {
       "user": {
-        "title": "Create custom generic thermostat",
+        "title": "Create better generic thermostat",
         "description": "Create a climate entity that controls the temperature via a switch and sensor.",
         "data": {
           "ac_mode": "Cooling mode",
@@ -40,24 +40,24 @@
     "step": {
       "init": {
         "data": {
-          "ac_mode": "[%key:component::custom_generic_thermostat::config::step::user::data::ac_mode%]",
-          "heater": "[%key:component::custom_generic_thermostat::config::step::user::data::heater%]",
-          "target_sensor": "[%key:component::custom_generic_thermostat::config::step::user::data::target_sensor%]",
-          "cold_tolerance": "[%key:component::custom_generic_thermostat::config::step::user::data::cold_tolerance%]",
-          "hot_tolerance": "[%key:component::custom_generic_thermostat::config::step::user::data::hot_tolerance%]",
-          "min_temp": "[%key:component::custom_generic_thermostat::config::step::user::data::min_temp%]",
-          "max_temp": "[%key:component::custom_generic_thermostat::config::step::user::data::max_temp%]"
+          "ac_mode": "[%key:component::better_generic_thermostat::config::step::user::data::ac_mode%]",
+          "heater": "[%key:component::better_generic_thermostat::config::step::user::data::heater%]",
+          "target_sensor": "[%key:component::better_generic_thermostat::config::step::user::data::target_sensor%]",
+          "cold_tolerance": "[%key:component::better_generic_thermostat::config::step::user::data::cold_tolerance%]",
+          "hot_tolerance": "[%key:component::better_generic_thermostat::config::step::user::data::hot_tolerance%]",
+          "min_temp": "[%key:component::better_generic_thermostat::config::step::user::data::min_temp%]",
+          "max_temp": "[%key:component::better_generic_thermostat::config::step::user::data::max_temp%]"
         },
         "data_description": {
-          "heater": "[%key:component::custom_generic_thermostat::config::step::user::data_description::heater%]",
-          "target_sensor": "[%key:component::custom_generic_thermostat::config::step::user::data_description::target_sensor%]",
-          "ac_mode": "[%key:component::custom_generic_thermostat::config::step::user::data_description::ac_mode%]",
-          "cold_tolerance": "[%key:component::custom_generic_thermostat::config::step::user::data_description::cold_tolerance%]",
-          "hot_tolerance": "[%key:component::custom_generic_thermostat::config::step::user::data_description::hot_tolerance%]"
+          "heater": "[%key:component::better_generic_thermostat::config::step::user::data_description::heater%]",
+          "target_sensor": "[%key:component::better_generic_thermostat::config::step::user::data_description::target_sensor%]",
+          "ac_mode": "[%key:component::better_generic_thermostat::config::step::user::data_description::ac_mode%]",
+          "cold_tolerance": "[%key:component::better_generic_thermostat::config::step::user::data_description::cold_tolerance%]",
+          "hot_tolerance": "[%key:component::better_generic_thermostat::config::step::user::data_description::hot_tolerance%]"
         }
       },
       "presets": {
-        "title": "[%key:component::custom_generic_thermostat::config::step::presets::title%]",
+        "title": "[%key:component::better_generic_thermostat::config::step::presets::title%]",
         "data": {
           "away_temp": "[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::away%]",
           "comfort_temp": "[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::comfort%]",
